did some line spacing fixes with bullets overflow fixes

--- a/style.css
+++ b/style.css
@@ -820,7 +820,7 @@ body.ai-on .ai-badge { opacity: 1; }
 .rv-edu-courses { font-size: 8.8pt; color: #555; margin-top: 1px; }
 
 /* Project entries */
-.rv-proj-entry { margin-bottom: 11px; }
+.rv-proj-entry { margin-bottom: 11px; line-height: 1;}
 .rv-proj-entry:last-child { margin-bottom: 0; }
 .rv-proj-row {
   display: flex;
@@ -829,16 +829,20 @@ body.ai-on .ai-badge { opacity: 1; }
   margin-bottom: 1px;
 }
 .rv-proj-name { font-size: 10pt; font-weight: 550; color: #111; }
-.rv-proj-stack { font-size: 9pt; color: #555; font-style: italic; }
+.rv-proj-stack { font-size: 9pt; color: #555; font-style: italic; margin-bottom: 2px; }
 .rv-proj-link { font-size: 8.5pt; color: #14142b; }
-.rv-proj-bullets { list-style: none; padding: 0; margin-top: 3px; }
+.rv-proj-bullets { list-style: none; padding: 0; margin-bottom: 10px;}
 .rv-proj-bullets li {
   font-size: 9.4pt;
   color: #2a2a2a;
-  padding-left: 14px;
+  padding-left: 0px;
   position: relative;
-  line-height: 1.5;
-  margin-bottom: 2px;
+  line-height: 1.2;
+  margin-bottom: 2.4px;
+  display: flex;
+  align-items: flex-start;
+  gap: 5px;
+  list-style: none;
 }
 .rv-proj-bullets li::before {
   content: '•';
@@ -885,20 +889,44 @@ body.ai-on .ai-badge { opacity: 1; }
 .rv-exp-right {
   text-align: right;
 }
-.rv-exp-block {margin-bottom: 10px;}
+.rv-exp-block {margin-bottom: 10px;line-height: 1.17;}
 .rv-exp-company { font-size: 10pt; font-weight: 650; color: #111; margin-top: -1px; margin-bottom: 3px ; }
 .rv-exp-date { font-size: 9pt; color: #555; }
 .rv-exp-role { font-size: 10.5pt; color: #333; font-style: italic;}
 .rv-exp-loc {margin-top: -1px;}
-.rv-exp-bullets { list-style: none; padding: 0;  }
+/* .rv-exp-bullets { 
+  list-style: none;
+  padding: 0;
+  display: flex;
+  align-items: flex-start;
+  gap: 5px; 
+ } */
+
+ .rv-exp-bullet {
+  display: flex;
+  align-items: flex-start;
+  gap: 5px;
+    margin-bottom: 3px;
+}
+
+.rv-exp-bullet .bullet-dot {
+  flex-shrink: 0;
+}
+
+.rv-exp-bullet .bullet-text {
+  flex: 1;
+  min-width: 0;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
 
 .rv-exp-bullets li {
   font-size: 9.4pt;
   color: #2a2a2a;
   padding-left: 14px;
   position: relative;
-  line-height: 1.47;
-  margin-bottom: 2px;
+  line-height: 1.3;
+  margin-bottom: 1.9px;
 }
 .rv-exp-bullets li::before {
   content: '•';
@@ -1493,8 +1521,4 @@ body.ai-on .ai-badge { opacity: 1; }
     background: #fff4e5;
     color: #b45309;
     border: 1px solid #fbbf24;
-}
-
-#resumeDoc {
-  line-height: 1.3;
 }
